[gd_scene load_steps=7 format=3 uid="uid://ba3yi75by7i4l"]

[ext_resource type="Theme" uid="uid://dbvmo5viem8os" path="res://UI/withering_menu.tres" id="1_m0po2"]
[ext_resource type="Script" path="res://InventoryManagers/tea_storage_inventory.gd" id="2_51xvf"]
[ext_resource type="PackedScene" uid="uid://bxy5ij2avjjte" path="res://InventoryManagers/inventory.tscn" id="3_j0mxp"]

[sub_resource type="LabelSettings" id="LabelSettings_3aja0"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_0wmcg"]
font_size = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_32tdk"]

[node name="TeaStorageInventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m0po2")
script = ExtResource("2_51xvf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 130.0
offset_bottom = 95.0
theme = ExtResource("1_m0po2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HeaderLabel" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
text = "Tea Storage"
label_settings = SubResource("LabelSettings_3aja0")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 13

[node name="CapacityLabel" type="Label" parent="PanelContainer/MarginContainer2"]
layout_mode = 2
text = "Capacity: 100 Finished Tea Leaves"
label_settings = SubResource("LabelSettings_0wmcg")

[node name="MarginContainer8" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 24

[node name="StorageInventory" parent="PanelContainer/MarginContainer8" instance=ExtResource("3_j0mxp")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_32tdk")

[node name="MarginContainer" parent="PanelContainer/MarginContainer8/StorageInventory" index="0"]
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ItemGrid" parent="PanelContainer/MarginContainer8/StorageInventory/MarginContainer" index="0"]
columns = 6

[editable path="PanelContainer/MarginContainer8/StorageInventory"]
